Fix #98 - Scrolling added if card with too large width

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -182,7 +182,7 @@ body {
 }
 
 .clear {
-  
+
 }
 
 /* Managing the template */
@@ -240,6 +240,9 @@ select.cards-list {
   margin-left: auto;
   margin-right: auto;
   display: block;
+}
+#card-canvas-box {
+  overflow-x: auto;
 }
 
 /***********************/
